# pocket-editor

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  wsldriver.supp
docs/: compiling.md
include/: compiler.hpp
src/: compiler.cpp  editor.cpp  editor.hpp
